[tool.poetry]
name = "painter"
version = "0.1.0"
description = ""
authors = ["Artem Voskresensky <metravs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
httpx = "^0.23.3"
pydantic = "^1.10.4"
rudalle = "^1.1.3"
cython = "^0.29.33"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
